--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,5 +1,5 @@
-/* Empty. Add your own CSS if you like */
 #wrapper {
+	width: 100%;
 	box-shadow: 0px 1px 0px #b4b4b4;
 }
 
@@ -31,15 +31,16 @@
 	overflow-y: scroll;
 	-webkit-overflow-scrolling: touch;
 }
+
 #button_favoris{
 	text-align: center;
-	padding-left: 2px;
 }
-#description_event_name{
-	text-align: center;
-	padding-left: 2px;
 
+#description_event_name{
+	padding-left: 2px;
+	text-align: center;
 }
+
 #button_details{
 	text-align: center;
 }
