--- a/www/css/style.css
+++ b/www/css/style.css
@@ -19,7 +19,7 @@
 }
 
 #master {
-	width: 20%;
+	width: 30%;
 	height: 100%;
 	border-right: 1px solid black;
 }
@@ -50,6 +50,63 @@
 	text-align: justify;
 }
 
+#button_favoris{
+	text-align: center;
+	padding-left: 2px;
+}
+
+#description_event_name{
+	padding-left: 2px;
+	text-align: center;
+}
+
+#button_details{
+	text-align: center;
+}
+
+.labels {
+  color: white;
+  background-color: red;
+  font-family: "Lucida Grande", "Arial", sans-serif;
+  font-weight : bold;
+  font-size: 9px;
+  text-align: center;
+  width: 25px;
+  white-space: nowrap;
+}
+
+
+#description_event_content{
+	height: 30%;
+	width: 100%;
+}
+
+#description_event_wrapper{
+	height: 30%;
+	width: 100%;
+	text-align: center;
+	font-size: 1.2em;
+	overflow-y: scroll;
+	-webkit-overflow-scrolling: touch;
+}
+
+#detailpanel{
+	visibility: hidden;
+	display: none;
+}
+
+#description_event{
+	float:left;
+	width: 30%;
+	height: 100%;
+}
+
+#description_event{
+	float:left;
+	width: 30%;
+	height: 100%;
+}
+
 @media screen and (max-width: 768px) { 
 	#master {
 	  width: 100%;
@@ -77,30 +134,15 @@
 	#view.mode-detail #detail {
 	  display: block;
 	}
-}
 
-#description_event_content{
-	height: 30%;
-	width: 100%;
-}
+	#viewList.mode-detail #master { 
+	  display: none;         
+	}
 
-#description_event_wrapper{
-	height: 30%;
-	width: 100%;
-	text-align: center;
-	font-size: 1.2em;
-	overflow-y: scroll;
-	-webkit-overflow-scrolling: touch;
-}
+	#viewList.mode-detail #detail {
+	  display: block;
+	}
 
-#description_event{
-	float:left;
-	width: 30%;
-	height: 100%;
-}
-
-/* Portrait  */
-@media (max-width: 640px){
 	.portrait{
 		visibility: visible;
 		display: block;
@@ -111,11 +153,21 @@
 	}
 }
 
+
 /* Paysage */ 
-@media (min-width: 640px){
+@media (min-width: 768px){
+
+	#listeventList{
+		float: left;
+		width:30%;
+	}
+	#detailsList{
+		float: right;
+		width:70%;
+		height: 100%;
+	}
 	.paysage{
 		visibility: visible;
-		display: block;
 	}
 	.portrait{
 		visibility: hidden;
@@ -127,32 +179,12 @@
 		width: 70%
 	}
 
+	#detailpanel{
+		float:right;
+		width: 70%;
+	}
+
 	#description_event_wrapper{
 		height: 100%;
 	}
-}
-
-#button_favoris{
-	text-align: center;
-	padding-left: 2px;
-}
-
-#description_event_name{
-	padding-left: 2px;
-	text-align: center;
-}
-
-#button_details{
-	text-align: center;
-}
-
-.labels {
-  color: white;
-  background-color: red;
-  font-family: "Lucida Grande", "Arial", sans-serif;
-  font-weight : bold;
-  font-size: 9px;
-  text-align: center;
-  width: 25px;
-  white-space: nowrap;
 }
