Essai d'ajout d'animation sur les markers

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -114,3 +114,24 @@
   width: 25px;
   white-space: nowrap;
 }
+
+.labels.active .inner {
+    background-color: red;
+}
+.labels.hover .inner {
+    background-color: red;
+}
+
+.labels .arrow{
+    background-color: red;
+}
+
+.labels.active .arrow {
+    
+    background-color: green;
+}
+
+.labels.hover .arrow {
+    background-color: green;
+}
+
