--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,4 +1,4 @@
-#wrapper {
+.wrapper {
 	width: 100%;
 	box-shadow: 0px 1px 0px #b4b4b4;
 }
@@ -18,27 +18,23 @@
 	height: 100%;
 }
 
-#master {
+.master {
 	float: left;
-	width: 20%;
+	width: 30%;
 	height: 100%;
 	border-right: 1px solid black;
 }
-      
-.master-item {
-	border-right: 1px solid black;
-}
-
-#detail {
+    
+.detail {
 	float: left;
-	width: 80%;
+	width: 70%;
 	height: 100%;
 }
-#detail p {
+.detail p {
 	margin-bottom: 5px;
 }
 
-#detail-backButton {
+.detail-backButton {
 	visibility: hidden;
 	position: absolute;
 }
@@ -58,42 +54,39 @@
 	text-align: justify;
 }
 
-.master-item-selected {
+.master-item-list-selected {
 	color: orange;
 }
 
-@media screen and (max-width: 768px) { 
-	#master {
-	  width: 100%;
-	  border-right: none;
-	}
-
-	.master-item {
-	  border-right: none;
-	}
-
-	.master-item-selected {
-		color: black;
-	}
-
-	#detail {
-	  width: 100%;
-	  display: none;
-	}
-
-	#detail-backButton {
-	  visibility: visible;
-	}
-
-	#view.mode-detail #master { 
-	  /* En mode détail, on cache le maitre pour montrer le détail */
-	  display: none;         
-	}
-
-	#view.mode-detail #detail {
-	  display: block;
-	}
+.master-item-favorite-selected {
+	color: orange;
 }
+
+#button_favoris{
+	text-align: center;
+	padding-left: 2px;
+}
+
+#description_event_name{
+	padding-left: 2px;
+	text-align: center;
+}
+
+#button_details{
+	text-align: center;
+}
+
+.labels {
+  color: white;
+  background-color: red;
+  font-family: "Lucida Grande", "Arial", sans-serif;
+  font-weight : bold;
+  font-size: 9px;
+  text-align: center;
+  width: 25px;
+  white-space: nowrap;
+}
+
 
 #description_event_content{
 	height: 30%;
@@ -109,14 +102,62 @@
 	-webkit-overflow-scrolling: touch;
 }
 
+.detailpanel{
+	visibility: hidden;
+	display: none;
+}
+
 #description_event{
 	float:left;
 	width: 30%;
 	height: 100%;
 }
 
-/* Portrait  */
-@media (max-width: 640px){
+#description_event{
+	float:left;
+	width: 30%;
+	height: 100%;
+}
+
+@media screen and (max-width: 768px) { 
+	.master {
+	  width: 100%;
+	  border-right: none;
+	}
+
+	.master-item-list-selected {
+		color: black;
+	}
+	.master-item-favorite-selected {
+		color: black;
+	}
+
+	.detail {
+	  width: 100%;
+	  display: none;
+	}
+
+	.detail-backButton {
+	  visibility: visible;
+	}
+
+	#view.mode-detail .master { 
+	  /* En mode détail, on cache le maitre pour montrer le détail */
+	  display: none;         
+	}
+
+	#view.mode-detail .detail {
+	  display: block;
+	}
+
+	#viewList.mode-detail .master { 
+	  display: none;         
+	}
+
+	#viewList.mode-detail .detail {
+	  display: block;
+	}
+
 	.portrait{
 		visibility: visible;
 		display: block;
@@ -127,11 +168,21 @@
 	}
 }
 
+
 /* Paysage */ 
-@media (min-width: 640px){
+@media (min-width: 768px){
+
+	#listeventList{
+		float: left;
+		width:30%;
+	}
+	.detailsList{
+		float: right;
+		width:70%;
+		height: 100%;
+	}
 	.paysage{
 		visibility: visible;
-		display: block;
 	}
 	.portrait{
 		visibility: hidden;
@@ -141,6 +192,11 @@
 	#map_content{
 		height: 100%;
 		width: 70%
+	}
+
+	.detailpanel{
+		float:right;
+		width: 70%;
 	}
 
 	#description_event_wrapper{
