correction d'affichage de tous les markers en jour.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -131,7 +131,7 @@
 }
 
 .labels {
-  color: white;
+  color: blue;
   background-color: red;
   font-family: "Lucida Grande", "Arial", sans-serif;
   font-weight : bold;
