--- a/www/css/style.css
+++ b/www/css/style.css
@@ -313,3 +313,68 @@
 		left: 0;
 	}
 }
+
+/* Login page */
+
+#page-login {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	background-color: #EEEEEE;
+	z-index: 999;
+}
+
+#container-login {
+    position: relative;
+    top: 40%;
+    text-align: center;
+}
+
+.elt-login {
+	background-color: rgb(74, 110, 169);
+    display: inline-block;
+    border-radius: 3%;
+}	
+
+.elt-login img {
+	vertical-align: middle;
+}
+
+.elt-login span {
+	color: white;
+	vertical-align: middle;
+}
+
+#facebook-login {
+}
+
+.img-facebook-square {
+	width: 40px;
+	height: 40px;
+}
+
+#back-login {
+	text-align: center;
+	margin-top: 10%;
+}
+
+/* Center Text on the top-right corner */
+
+.right-buttons {
+	display: inline-block !important;
+}
+
+.userProfil-text {
+	display: inline-block !important;
+}
+
+.userProfil-img {
+	width: 35px;
+	display: inline-block !important;
+}
+
+.valign {
+	vertical-align: middle !important;
+}
