--- a/www/css/style.css
+++ b/www/css/style.css
@@ -13,8 +13,8 @@
 	width: 100%;
 	float:left;
 	overflow: hidden;
-
 }
+
 .scroll {
 	height: 100%;
 }
@@ -31,6 +31,7 @@
 	width: 70%;
 	height: 100%;
 }
+
 .detail p {
 	margin-bottom: 5px;
 }
@@ -84,6 +85,15 @@
   white-space: nowrap;
 }
 
+.labels.active {
+    background: cyan;
+    color: black;
+}
+
+.labels.hover {
+    background-color: white;
+    color: red;
+}
 
 #description_event_content{
 	height: 30%;
@@ -110,8 +120,6 @@
 	height: 100%;
 }
 
-
-
 .master-item-favorite-selected {
 	color: orange;
 }
@@ -129,18 +137,6 @@
 #button_details{
 	text-align: center;
 }
-
-.labels {
-  color: blue;
-  background-color: red;
-  font-family: "Lucida Grande", "Arial", sans-serif;
-  font-weight : bold;
-  font-size: 9px;
-  text-align: center;
-  width: 25px;
-  white-space: nowrap;
-}
-
 
 #description_event_content{
 	height: 30%;
