Change marker color on click, mouseover and mouse hover
Finalisation changement couleur du marker sélectionné. J'ai réussi à
imposer la même couleur à l'icône et  l'étiquette intérieure du marker
sélectionné. Et tout cela en maintenant les autres options visible sur
ordinateur:

- Par défaut, les markers et les étiquettes sont de couleur rouge et
l'écriture sur l'étiquette est blanche.

- On Click, le marker et son étiquette devient move (cyan) et l'écriture
prend la couleur noir.

- mouseover: Si le marker est déjà activé, pas de changement de couleur,
sinon, le marker passe au vert avec écriture en rouge.
- mouseout : Si le marker est activé, couleur move, sinon couleur par
défaut.

- dblclick pour déselectionner un marker.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -75,24 +75,39 @@
 }
 
 .labels {
-  color: white;
-  background-color: red;
-  font-family: "Lucida Grande", "Arial", sans-serif;
-  font-weight : bold;
-  font-size: 9px;
-  text-align: center;
-  width: 25px;
-  white-space: nowrap;
+   color: white;
+   background-color: #FF0000;
+   border-radius: 10px;
+   font-family: "Lucida Grande", "Arial", sans-serif;
+   font-weight : bold;
+   font-size: 9px;
+   text-align: center;
+   width: 25px;
+   white-space: nowrap;
 }
 
 .labels.active {
-    background: cyan;
+    background: #00FFFF;
+    border-radius: 10px;
     color: black;
+    font-family: "Lucida Grande", "Arial", sans-serif;
+    font-weight : bold;
+    font-size: 9px;
+    text-align: center;
+    width: 25px;
+    white-space: nowrap;
 }
 
 .labels.hover {
-    background-color: white;
+    background: #00FF00;
+    border-radius: 4px;
     color: red;
+    font-family: "Lucida Grande", "Arial", sans-serif;
+    font-weight : bold;
+    font-size: 9px;
+    text-align: center;
+    width: 25px;
+    white-space: nowrap;
 }
 
 #description_event_content{
@@ -251,17 +266,6 @@
 
 #button_details{
 	text-align: center;
-}
-
-.labels {
-  color: white;
-  background-color: red;
-  font-family: "Lucida Grande", "Arial", sans-serif;
-  font-weight : bold;
-  font-size: 9px;
-  text-align: center;
-  width: 25px;
-  white-space: nowrap;
 }
 
 .volunteer-header {
